log

Wed 16 Aug 2023 08:35:23 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:19:15: error: format ‘%d’ expects argument of type ‘int *’, but argument 2 has type ‘int’ [-Werror=format=]
   19 |       scanf("%d",arr[size]);
      |              ~^  ~~~~~~~~~
      |               |     |
      |               int * int
exercises.c: At top level:
exercises.c:22:1: error: expected identifier or ‘(’ before ‘}’ token
   22 | }
      | ^
exercises.c:23:1: error: expected identifier or ‘(’ before ‘}’ token
   23 | } {return 0; }
      | ^
exercises.c:23:3: error: expected identifier or ‘(’ before ‘{’ token
   23 | } {return 0; }
      |   ^
exercises.c: In function ‘findMax’:
exercises.c:19:7: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   19 |       scanf("%d",arr[size]);
      |       ^~~~~~~~~~~~~~~~~~~~~
exercises.c:21:5: error: control reaches end of non-void function [-Werror=return-type]
   21 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
bf14427
Wed 16 Aug 2023 08:35:46 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:19:18: error: invalid type argument of unary ‘*’ (have ‘int’)
   19 |       scanf("%d",*arr[size]);
      |                  ^~~~~~~~~~
exercises.c: At top level:
exercises.c:22:1: error: expected identifier or ‘(’ before ‘}’ token
   22 | }
      | ^
exercises.c:23:1: error: expected identifier or ‘(’ before ‘}’ token
   23 | } {return 0; }
      | ^
exercises.c:23:3: error: expected identifier or ‘(’ before ‘{’ token
   23 | } {return 0; }
      |   ^
exercises.c: In function ‘findMax’:
exercises.c:21:5: error: control reaches end of non-void function [-Werror=return-type]
   21 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
931a783
Wed 16 Aug 2023 08:36:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:19:28: error: expected expression before ‘)’ token
   19 |       scanf("%d",arr[size]*);
      |                            ^
exercises.c: At top level:
exercises.c:22:1: error: expected identifier or ‘(’ before ‘}’ token
   22 | }
      | ^
exercises.c:23:1: error: expected identifier or ‘(’ before ‘}’ token
   23 | } {return 0; }
      | ^
exercises.c:23:3: error: expected identifier or ‘(’ before ‘{’ token
   23 | } {return 0; }
      |   ^
exercises.c: In function ‘findMax’:
exercises.c:21:5: error: control reaches end of non-void function [-Werror=return-type]
   21 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
7e68ed1
Wed 16 Aug 2023 08:36:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:19:15: error: format ‘%d’ expects argument of type ‘int *’, but argument 2 has type ‘int’ [-Werror=format=]
   19 |       scanf("%d",arr[size]);
      |              ~^  ~~~~~~~~~
      |               |     |
      |               int * int
exercises.c: At top level:
exercises.c:22:1: error: expected identifier or ‘(’ before ‘}’ token
   22 | }
      | ^
exercises.c:23:1: error: expected identifier or ‘(’ before ‘}’ token
   23 | } {return 0; }
      | ^
exercises.c:23:3: error: expected identifier or ‘(’ before ‘{’ token
   23 | } {return 0; }
      |   ^
exercises.c: In function ‘findMax’:
exercises.c:19:7: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   19 |       scanf("%d",arr[size]);
      |       ^~~~~~~~~~~~~~~~~~~~~
exercises.c:21:5: error: control reaches end of non-void function [-Werror=return-type]
   21 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
0b3b9a2
Wed 16 Aug 2023 08:36:33 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:19:15: error: format ‘%d’ expects argument of type ‘int *’, but argument 2 has type ‘int’ [-Werror=format=]
   19 |       scanf("%d",arr[size]);
      |              ~^  ~~~~~~~~~
      |               |     |
      |               int * int
exercises.c: At top level:
exercises.c:23:3: error: expected identifier or ‘(’ before ‘{’ token
   23 | } {return 0; }
      |   ^
exercises.c: In function ‘findMax’:
exercises.c:19:7: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   19 |       scanf("%d",arr[size]);
      |       ^~~~~~~~~~~~~~~~~~~~~
exercises.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | } {return 0; }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5dde1eb
Wed 16 Aug 2023 08:37:15 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:19:15: error: format ‘%d’ expects argument of type ‘int *’, but argument 2 has type ‘int’ [-Werror=format=]
   19 |       scanf("%d",arr[size]);
      |              ~^  ~~~~~~~~~
      |               |     |
      |               int * int
exercises.c:19:7: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   19 |       scanf("%d",arr[size]);
      |       ^~~~~~~~~~~~~~~~~~~~~
exercises.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3897453
Wed 16 Aug 2023 08:39:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:19:7: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   19 |       scanf("%d",&arr[size]);
      |       ^~~~~~~~~~~~~~~~~~~~~~
exercises.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f72a852
Thu 17 Aug 2023 08:04:02 PM UTC: 
 exercises.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
test.c: In function ‘findMax’:
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
test.c:411: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
73dcf49
Thu 17 Aug 2023 08:04:35 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
   24 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
53791d6
Thu 17 Aug 2023 08:04:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
   24 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c4d0825
